Fix text alignment in ResultDisplay

--- a/src/main/resources/view/TrackOTheme.css
+++ b/src/main/resources/view/TrackOTheme.css
@@ -565,6 +565,10 @@
     -fx-background-radius: 10px;
 }
 
+#resultDisplay .content .text {
+    -fx-text-alignment: justify;
+}
+
 #tags {
     -fx-hgap: 7;
     -fx-vgap: 3;
